
  [ Ben Hutchings ]
  * [hppa/parisc64-smp] Work around gcc 4.8 miscompilation (Closes: #762390)
  * [powerpc/powerpc64,ppc64*] video/fb: Change FB_MATROX, FB_RADEON, FB_ATY,
    FB_SIS, FB_3DFX, FB_VOODOO1 back to modules (Closes: #748398)
  * udeb: Add pata_rdc to pata-modules (Closes: #633128)
  * [s390*] 3215: fix tty output containing tabs (Closes: #758264)

 -- Ian Campbell <ijc@debian.org>  Sun, 21 Sep 2014 12:09:24 +0100

linux (3.16.3-2) unstable; urgency=medium

  [ Ben Hutchings ]
  * [s390*] syscall: Fix unimplented-syscall entries added before
    memfd_create() (fixes FTBFS) (Closes: #762221)
  * [armel/kirkwood] Change configuration to reduce kernel image size
    (fixes FTBFS) (Closes: #762219)
    - block: Change IOSCHED_DEADLINE to module
    - gpu: Disable VGA_ARB

  [ Aurelien Jarno ]
  * [mips*/octeon] Enable OCTEON_USB, USB_EHCI_HCD, USB_OHCI_HCD,
    and USB_OCTEON_EHCI, USB_OCTEON_OHCI (Closes: #762066).

 -- Bastian Blank <waldi@debian.org>  Sat, 20 Sep 2014 11:43:05 +0200

linux (3.16.3-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.16.3
    - reiserfs: fix corruption introduced by balance_leaf refactor
      (regression in 3.16) (Closes: #761457)
    - reiserfs: Fix use after free in journal teardown
    - media: v4l: vb2: Fix stream start and buffer completion race
    - [x86] iommu/vt-d: Exclude devices using RMRRs from IOMMU API domains
    - [powerpc*] powerpc/powernv: Fix IOMMU group lost (regression in 3.15)
    - [x86] iommu/vt-d: Defer domain removal if device is assigned to a driver
    - [x86] iommu/amd: Fix cleanup_domain for mass device removal
    - [s390*] locking: Reenable optimistic spinning
    - firmware: Do not use WARN_ON(!spin_is_locked())
    - CAPABILITIES: remove undefined caps from all processes
    - fanotify: fix double free of pending permission events
    - ocfs2: do not write error flag to user structure we cannot copy from/to